C/include/codata_constants_2010.h

ADD_IMPORT extern const struct codata_constant_type ELECTRON_MASS_IN_U_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MOLAR_MASS_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MUON_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MUON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_NEUTRON_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_NEUTRON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_PROTON_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_PROTON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TAU_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TO_SHIELDED_HELION_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TRITON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2010;