src/codata_constants_2010_capi.f90


type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MASS_IN_U_2010") ::&
capi_91_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "i", "n", " ", "u", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MASS_IN_U_2010%value, &
ELECTRON_MASS_IN_U_2010%uncertainty, &
[ &
"u", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MOLAR_MASS_2010") ::&
capi_92_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"o", "l", "a", "r", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MOLAR_MASS_2010%value, &
ELECTRON_MOLAR_MASS_2010%uncertainty, &
[ &
"k", "g", " ", "m", "o", "l", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MUON_MAG_MOM_RATIO_2010") ::&
capi_93_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "m", &
"u", "o", "n", " ", "m", "a", "g", ".", " ", "m", &
"o", "m", ".", " ", "r", "a", "t", "i", "o", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MUON_MAG_MOM_RATIO_2010%value, &
ELECTRON_MUON_MAG_MOM_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MUON_MASS_RATIO_2010") ::&
capi_94_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "m", &
"u", "o", "n", " ", "m", "a", "s", "s", " ", "r", &
"a", "t", "i", "o", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MUON_MASS_RATIO_2010%value, &
ELECTRON_MUON_MASS_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_NEUTRON_MAG_MOM_RATIO_2010") ::&
capi_95_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "n", &
"e", "u", "t", "r", "o", "n", " ", "m", "a", "g", &
".", " ", "m", "o", "m", ".", " ", "r", "a", "t", &
"i", "o", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_NEUTRON_MAG_MOM_RATIO_2010%value, &
ELECTRON_NEUTRON_MAG_MOM_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_NEUTRON_MASS_RATIO_2010") ::&
capi_96_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "n", &
"e", "u", "t", "r", "o", "n", " ", "m", "a", "s", &
"s", " ", "r", "a", "t", "i", "o", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_NEUTRON_MASS_RATIO_2010%value, &
ELECTRON_NEUTRON_MASS_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_PROTON_MAG_MOM_RATIO_2010") ::&
capi_97_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "p", &
"r", "o", "t", "o", "n", " ", "m", "a", "g", ".", &
" ", "m", "o", "m", ".", " ", "r", "a", "t", "i", &
"o", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_PROTON_MAG_MOM_RATIO_2010%value, &
ELECTRON_PROTON_MAG_MOM_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_PROTON_MASS_RATIO_2010") ::&
capi_98_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "p", &
"r", "o", "t", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_PROTON_MASS_RATIO_2010%value, &
ELECTRON_PROTON_MASS_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_TAU_MASS_RATIO_2010") ::&
capi_99_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "t", &
"a", "u", " ", "m", "a", "s", "s", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_TAU_MASS_RATIO_2010%value, &
ELECTRON_TAU_MASS_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2010") ::&
capi_100_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "t", &
"o", " ", "a", "l", "p", "h", "a", " ", "p", "a", &
"r", "t", "i", "c", "l", "e", " ", "m", "a", "s", &
"s", " ", "r", "a", "t", "i", "o", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2010%value, &
ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_TO_SHIELDED_HELION_MAG_MOM_RATIO_2010") ::&
capi_101_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "t", &
"o", " ", "s", "h", "i", "e", "l", "d", "e", "d", &
" ", "h", "e", "l", "i", "o", "n", " ", "m", "a", &
"g", ".", " ", "m", "o", "m", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_TO_SHIELDED_HELION_MAG_MOM_RATIO_2010%value, &
ELECTRON_TO_SHIELDED_HELION_MAG_MOM_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO_2010") ::&
capi_102_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "t", &
"o", " ", "s", "h", "i", "e", "l", "d", "e", "d", &
" ", "p", "r", "o", "t", "o", "n", " ", "m", "a", &
"g", ".", " ", "m", "o", "m", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO_2010%value, &
ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_TRITON_MASS_RATIO_2010") ::&
capi_103_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "t", &
"r", "i", "t", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_TRITON_MASS_RATIO_2010%value, &
ELECTRON_TRITON_MASS_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_2010") ::&
capi_104_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_2010%value, &
ELECTRON_VOLT_2010%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2010") ::&
capi_105_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "a", "t", "o", "m", "i", "c", &
" ", "m", "a", "s", "s", " ", "u", "n", "i", "t", &
" ", "r", "e", "l", "a", "t", "i", "o", "n", "s", &
"h", "i", "p", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2010%value, &
ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2010%uncertainty, &
[ &
"u", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
